# falcon

./: .gitignore  CMakeLists.txt  README.md  lorem ipsum.txt
.github/workflows/: cmake-multi-platform.yml
inc/: falcon.h  library.h  protocol.h  uuid.h
samples/client/: CMakeLists.txt  main.cpp
samples/server/: CMakeLists.txt  main.cpp
src/: falcon_client.cpp  falcon_common.cpp  falcon_posix.cpp  falcon_server.cpp  falcon_stream.cpp  falcon_windows.cpp  uuid.cpp
tests/: CMakeLists.txt  test.cpp
